--- a/views/playlist.ejs
+++ b/views/playlist.ejs
@@ -19,7 +19,7 @@
                 <a href="/video/<%=video._id%>">
                 <div class="video flex gap-4 relative w-full mb-1 hover:bg-zinc-200 p-1 py-2 rounded-xl pl-8">
                     <h1 class="absolute top-1/2 -translate-y-1/2 left-2 font-medium"><%=i+1%></h1>
-                    <div class="bg-zinc-500 rounded-xl w-[11vw] h-[13.5vh] relative">
+                    <div class="bg-zinc-500 shrink-0 rounded-xl w-[11vw] h-[13.5vh] relative">
                         <%if(video.thumbnail){%>
                             <div
                                 class="thumbnail absolute top-0 left-0 flex items-center justify-center w-full h-full z-[9] overflow-hidden bg-zinc-800 rounded-xl">
